Add data scripts

--- a/notebooks/Meter-data-ingest.ipynb
+++ b/notebooks/Meter-data-ingest.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "interval_1_df = spark.read.option(\"header\", True).option(\"inferSchema\", True).csv('file:///home/guest/data/meter_data_1.csv')"
@@ -75,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -85,26 +83,26 @@
       "+-------------+-----------------+----------------+--------------+--------------------+--------------------+--------------+--------+---------------+--------+--------------------+--------+--------+\n",
       "|meter_data_id|         checksum|consumption_data|encoder_tamper|              ert_id|      ert_id_ls_bits|ert_id_ms_bits|ert_type|physical_tamper|preamble|         received_ts|reserved|sync_bit|\n",
       "+-------------+-----------------+----------------+--------------+--------------------+--------------------+--------------+--------+---------------+--------+--------------------+--------+--------+\n",
-      "|          255|47498238489494848|            1197|          null|64100000000000000...|10000000000000000...|            64|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          326|47498238489494848|             364|          null|15100000000000000...|10000000000000000...|            15|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          374|47498238489494848|            1991|          null|22100000000000000...|10000000000000000...|            22|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          151|47498238489494848|             899|          null|24100000000000000...|10000000000000000...|            24|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          837|47498238489494848|            1098|          null|73100000000000000...|10000000000000000...|            73|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          840|47498238489494848|            1244|          null|52100000000000000...|10000000000000000...|            52|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          560|47498238489494848|             741|          null|19100000000000000...|10000000000000000...|            19|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          925|47498238489494848|            1540|          null|95100000000000000...|10000000000000000...|            95|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          554|47498238489494848|            1049|          null|42100000000000000...|10000000000000000...|            42|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|            6|47498238489494848|            3975|          null|94100000000000000...|10000000000000000...|            94|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          880|47498238489494848|             856|          null|74100000000000000...|10000000000000000...|            74|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          828|47498238489494848|            2597|          null|81100000000000000...|10000000000000000...|            81|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          483|47498238489494848|            1379|          null|56100000000000000...|10000000000000000...|            56|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          191|47498238489494848|             225|          null|51100000000000000...|10000000000000000...|            51|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          411|47498238489494848|            2296|          null|59100000000000000...|10000000000000000...|            59|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          682|47498238489494848|            3424|          null|75100000000000000...|10000000000000000...|            75|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          697|47498238489494848|            1916|          null|55100000000000000...|10000000000000000...|            55|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          794|47498238489494848|            2769|          null|94100000000000000...|10000000000000000...|            94|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          752|47498238489494848|            3853|          null|59100000000000000...|10000000000000000...|            59|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
-      "|          909|47498238489494848|            2356|          null|76100000000000000...|10000000000000000...|            76|electric|           null| 0xF2A60|2018-11-29 19:52:...|    null|       1|\n",
+      "|          745|47498238489494848|            3392|          null|28100000000000000...|10000000000000000...|            28|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          863|47498238489494848|            3055|          null|19100000000000000...|10000000000000000...|            19|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          885|47498238489494848|             116|          null|91100000000000000...|10000000000000000...|            91|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          662|47498238489494848|            3885|          null|72100000000000000...|10000000000000000...|            72|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          617|47498238489494848|            2343|          null|32100000000000000...|10000000000000000...|            32|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          702|47498238489494848|            3282|          null|43100000000000000...|10000000000000000...|            43|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|           58|47498238489494848|            1843|          null|25100000000000000...|10000000000000000...|            25|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          803|47498238489494848|            1488|          null|24100000000000000...|10000000000000000...|            24|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          594|47498238489494848|            2413|          null|99100000000000000...|10000000000000000...|            99|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          603|47498238489494848|            1599|          null|10010000000000000...|10000000000000000...|           100|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          866|47498238489494848|             980|          null|55100000000000000...|10000000000000000...|            55|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          155|47498238489494848|            1189|          null|72100000000000000...|10000000000000000...|            72|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|           32|47498238489494848|            2297|          null|72100000000000000...|10000000000000000...|            72|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          159|47498238489494848|             177|          null|79100000000000000...|10000000000000000...|            79|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          103|47498238489494848|            2520|          null|64100000000000000...|10000000000000000...|            64|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          818|47498238489494848|            2299|          null|51100000000000000...|10000000000000000...|            51|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          508|47498238489494848|            1849|          null|42100000000000000...|10000000000000000...|            42|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|           40|47498238489494848|            2055|          null|46100000000000000...|10000000000000000...|            46|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          949|47498238489494848|            1320|          null|51100000000000000...|10000000000000000...|            51|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
+      "|          521|47498238489494848|            2620|          null|41100000000000000...|10000000000000000...|            41|electric|           null| 0xF2A60|2018-12-27 01:02:...|    null|       1|\n",
       "+-------------+-----------------+----------------+--------------+--------------------+--------------------+--------------+--------+---------------+--------+--------------------+--------+--------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -119,22 +117,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_data = spark.read.option(\"header\", True).option(\"inferSchema\", True).csv('file:///home/guest/data/customer_data.csv')\n",
+    "cleaned_customer_data = customer_data.drop('_c0').withColumnRenamed('st_address','address')\n",
+    "\n",
+    "cleaned_customer_data = cleaned_customer_data.where(\"ert_id is not null\")\n",
+    "\n",
+    "cleaned_customer_data.write.format(\"org.apache.spark.sql.cassandra\").mode('append')\\\n",
+    ".options(table=\"customer_data\", keyspace=\"tangez_demo\").save()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f1fc3df8ad0>"
+       "2678"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spark"
+    "customer_data_from_db = stage_df = sqlContext.read.format(\"org.apache.spark.sql.cassandra\").options(table=\"customer_data\", keyspace=\"tangez_demo\").load()\n",
+    "customer_data_from_db.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- meter_data_id: string (nullable = true)\n",
+      " |-- checksum: string (nullable = true)\n",
+      " |-- consumption_data: integer (nullable = true)\n",
+      " |-- encoder_tamper: string (nullable = true)\n",
+      " |-- ert_id: string (nullable = true)\n",
+      " |-- ert_id_ls_bits: string (nullable = true)\n",
+      " |-- ert_id_ms_bits: string (nullable = true)\n",
+      " |-- ert_type: string (nullable = true)\n",
+      " |-- physical_tamper: string (nullable = true)\n",
+      " |-- preamble: string (nullable = true)\n",
+      " |-- received_ts: timestamp (nullable = true)\n",
+      " |-- reserved: string (nullable = true)\n",
+      " |-- sync_bit: integer (nullable = true)\n",
+      " |-- ert_id: string (nullable = true)\n",
+      " |-- address: string (nullable = true)\n",
+      " |-- name: string (nullable = true)\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "202"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined_df = stage_df.join(customer_data_from_db,stage_df.ert_id==customer_data_from_db.ert_id)\n",
+    "joined_df.printSchema()\n",
+    "joined_df.count()"
    ]
   },
   {
